@@ -1,3 +1,7 @@
+2007-08-16  Kai Tietz  <kai.tietz@onevision.com>
+
+	* stdlib.h: Corrected _sys_nerr and _sys_errlist declarations.
+
 2007-08-14  Kai Tietz  <kai.tietz@onevision.com>
 
 	* limits.h: (_CHAR_UNSIGNED): Removed unused define.
